--- a/README
+++ b/README
@@ -2,15 +2,16 @@ Python PlayGround.
  - Jameson Lee
 
  Intended to display programming style in python
+ but actually is turning into code-sample and self-reference
 
  Google:
    First batch of questions will be codes from Google Code Jam (not actually participating)
    Key will be with notes and comments, you can get the original question from google here:
    http://code.google.com/codejam/contests.html
-   Starting from Code Jam 2011 and moving backwards (sometime)
+   Starting from Code Jam 2011 and moving backwards (someday)
 
  Greplin Challenge:
-  greplin.py
+ greplin.py
  - challenge.greplin.com
  3 problems, sub-string search, prime numbers, subsets
  used itertools found via StackOverFlow for 3rd problems
@@ -20,4 +21,12 @@ Python PlayGround.
  - Base Solver is a refactored Norvig code
  - Has Inputbox.py (from the internets)
  - Mouse + Keyboard game
+ - Code sample for IBG
+
+ ms:
+ for MindSnacks
+ - www.mindsnacks.com/challenges/
+ solve for optimal pairing of tutors, players (may not be stable pairing)
+ - uses munkres python package
+ - see readme
 
